@@ -1,3 +1,7 @@
+- ezcWorkflowDatabaseDefinitionStorage can now handle subclasses of
+  ezcWorkflowNodeStart, ezcWorkflowNodeEnd, and ezcWorkflowNodeFinally.
+
+
 1.3 - Monday 05 January 2009
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
